--- a/src/06_ametop_final_report.Rmd
+++ b/src/06_ametop_final_report.Rmd
@@ -425,6 +425,32 @@ data$`Reaction to skin puncture` <- gsub("^(Slight|Severe).*", "\\1 Pain",
 table(data$`Reaction to skin puncture`)
 ```
 
+### Data preprocessing
+
+```{r, echo=TRUE}
+# Create new variables for the dataset
+
+# Create 'Observer Number'
+data$`Observer Number` <- case_when(
+  data$`Reaction to skin puncture` == "None" ~ 1,
+  data$`Reaction to skin puncture` == "Slight Pain" ~ 2,
+  data$`Reaction to skin puncture` == "Severe Pain" ~ 3
+)
+
+# Create 'FPS-R Number'
+data$`FPS-R Number` <- case_when(
+  data$`FPS-R score` %in% c(0, 2) ~ 1,
+  data$`FPS-R score` %in% c(4, 6) ~ 2,
+  data$`FPS-R score` %in% c(8, 10) ~ 3
+)
+
+# Create 'Match Responses'
+data$`Match Responses` <- ifelse(data$`Observer Number` == data$`FPS-R Number`, "Yes", "No")
+
+# Create data subset for match data
+data_subset <- data[data$`Match Responses` == 'Yes',]
+```
+
 ```{r, echo=TRUE}
 # Verify data
 head(data)
@@ -454,6 +480,23 @@ plot2 <- data %>% filter(Randomization == 2) %>%
 
 plot1
 plot2
+```
+
+#### Table
+
+```{r, echo=TRUE}
+# Create a table to count matches
+table <- table(data$`Observer Number`, data$`FPS-R Number`)
+
+# Name the rows and columns to reflect the desired format
+rownames(table) <- c("1", "2", "3")
+colnames(table) <- c("1", "2", "3")
+
+# Output the 3x3 table
+cat("Contingency Table of FPS-R Number vs. Observer Number\n")
+cat("Rows: FPS-R Number\n")
+cat("Columns: Observer Number\n\n")
+print(table)
 ```
 
 #### T-tests
